manifests/cluster/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
