manifests/cluster/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.cowlab.org`)
      kind: Rule
      services:
        - name: searxng
          port: 80
